# gpt-teacher-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
app/agents/code_analyser_agent/: __init__.py  models.py  prompt.py
app/agents/teacher_agent/: __init__.py  prompt.py
app/core/: config.py  deps.py
app/crud/: __init__.py
app/llm/: langchain.py
app/llm/agno/: __init__.py
app/llm/custom_models/: __init__.py
app/llm/prompts/: teacher_agent.py
app/llm/utils/: __init__.py
app/models/: __init__.py  dto.py
