[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "active>=0.0.5a0",
    "agno>=2.0.4",
    "crewai>=0.108.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.8",
    "google-genai>=1.36.0",
    "gunicorn>=23.0.0",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.1",
    "langchain-nvidia-ai-endpoints>=0.3.9",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary,pool]>=3.2.6",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.22",
    "transformers>=4.50.1",
]
